// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaterialSymbol should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--symbol material-symbols-outlined"
  data-testid="icon"
>
  air
</span>
`;

exports[`MaterialSymbol should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--symbol material-symbols-outlined custom-class-name"
  data-testid="icon"
  style="color: white;"
>
  air
</span>
`;

exports[`MaterialSymbol should support overriding the symbol configuration through the MATERIAL_CONFIG object 1`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--symbol material-symbols-outlined"
  data-testid="icon"
>
  air
</span>
`;

exports[`MaterialSymbol should support overriding the symbol configuration through the MATERIAL_CONFIG object 2`] = `
<span
  aria-hidden="true"
  class="rmd-icon rmd-icon--symbol material-symbols-rounded"
  data-testid="icon"
>
  air
</span>
`;
